cabal-version:      2.4
name:               kemtls
version:            0.1.0.0
license:            MIT
copyright:          2022 Sridhar Ratnakumar
maintainer:         srid@srid.ca
author:             Sridhar Ratnakumar
category:           Web
homepage:           https://srid.ca/kemtls

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
synopsis:           A template for Haskell projects using Nix

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    MultiWayIf
    NoStarIsType
    OverloadedRecordDot
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns

  build-depends:
    , aeson
    , async
    , base               >=4   && <5
    , base16-bytestring
    , binary
    , bytestring
    , crypton
    , data-default
    , directory
    , filepath
    , fixed-vector
    , memory
    , mtl
    , network
    , network-transport
    , optics-core
    , profunctors
    , relude             >=1.0
    , shower
    , time
    , with-utf8

  default-language:   GHC2021
  extra-libraries:    mctiny

library
  import:          shared
  hs-source-dirs:  src
  exposed-modules:
    Assertions
    Client
    Client.State
    Constants
    Cookie
    HKDF
    KEMTLS
    McTiny
    McTinyArchive
    Nonce
    Packet
    Packet.Generic
    Packet.TLS
    Paths
    Protocol
    Protocol.TLS
    Server
    Server.State
    SizedByteString
    Transcript
    Utils

executable server
  import:         shared
  main-is:        ServerMain.hs
  ghc-options:    -main-is ServerMain
  build-depends:  kemtls
  hs-source-dirs: app
  other-modules:

executable client
  import:         shared
  main-is:        ClientMain.hs
  build-depends:  kemtls
  hs-source-dirs: app
  ghc-options:    -main-is ClientMain
  other-modules:

executable initialise
  import:         shared
  main-is:        InitialiseMain.hs
  hs-source-dirs: app
  build-depends:  kemtls
  ghc-options:    -main-is InitialiseMain

test-suite test
  import:         shared
  type:           exitcode-stdio-1.0
  main-is:        Test.hs
  ghc-options:    -main-is Test
  hs-source-dirs: test
  build-depends:
    , hedgehog
    , kemtls
