cabal-version:      2.4
name:               kemtls
version:            0.1.0.0
license:            MIT
category:           Web
synopsis:           KEMTLS using McTiny as a KEM
extra-source-files: README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    MultiWayIf
    NoStarIsType
    OverloadedRecordDot
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns

  build-depends:
    , base               >=4   && <5
    , binary
    , bytestring
    , crypton
    , directory
    , filepath
    , fixed-vector
    , memory
    , mtl
    , network
    , network-transport
    , relude             >=1.0

  default-language:   GHC2021
  extra-libraries:    mctiny

library
  import:          shared
  hs-source-dirs:  src
  exposed-modules:
    Assertions
    Client
    Client.State
    Constants
    Cookie
    HKDF
    KEMTLS
    McTiny
    McTinyArchive
    Nonce
    Packet
    Packet.Generic
    Packet.McTiny
    Packet.TLS
    Paths
    Protocol
    Protocol.TLS
    Server
    Server.State
    SizedByteString
    Transcript
    Utils

executable kemtls-server
  import:         shared
  main-is:        ServerMain.hs
  ghc-options:    -main-is ServerMain
  build-depends:  kemtls
  hs-source-dirs: app
  other-modules:

executable kemtls-client
  import:         shared
  main-is:        ClientMain.hs
  build-depends:  kemtls
  hs-source-dirs: app
  ghc-options:    -main-is ClientMain
  other-modules:

executable kemtls-initialise
  import:         shared
  main-is:        InitialiseMain.hs
  hs-source-dirs: app
  build-depends:  kemtls
  ghc-options:    -main-is InitialiseMain

test-suite test
  import:         shared
  type:           exitcode-stdio-1.0
  main-is:        Test.hs
  ghc-options:    -main-is Test
  hs-source-dirs: test
  build-depends:
    , hedgehog
    , kemtls
